# Sonic_App

./: .gitignore  README.md  pyproject.toml
sonic/: .dockerignore  .env  Dockerfile  fly.toml  manage.py  requirements.txt
sonic/sonic/: asgi.py  settings.py  urls.py  wsgi.py
sonic/sonicapp/: admin.py  apps.py  forms.py  model_exp.py  models.py  urls.py  views.py
sonic/sonicapp/migrations/: 0001_initial.py  0002_filesupload.py  0003_delete_filesupload_remove_pdfile_text.py  0004_pdfile_user_id.py  0005_rename_user_id_pdfile_user.py  0006_rename_user_pdfile_auth_user.py  0007_remove_pdfile_auth_user_pdfile_user.py  0008_alter_pdfile_user.py  0009_pdfile_slug.py  0010_remove_pdfile_slug.py  0011_question_created_at.py
sonic/sonicapp/static/sonicapp/: style.css  tailwind.config.js
sonic/sonicapp/templates/sonicapp/: base.html  home.html  index.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  pdfile_detail.html  pdfile_list.html  post_confirm_delete.html  register.html  upload_file.html
