[tool.poetry]
name = "sonic"
version = "0.1.0"
description = ""
authors = ["PetroChulkov <114095841+PetroChulkov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
